welcome.lessons.welcome.array.arraycount9.ArrayCount9.scala.error
arrayCount9:7: error: ';' expected but ')' found.
  	if(nums(i)== 9) occ=occ+1);
                                 ^arrayCount9:13: error: Unmatched closing brace '}' ignored here
 }
 ^